Fixed view frame scrollbar bug

--- a/PHPfr.wdgt/Assets/css/styles.css
+++ b/PHPfr.wdgt/Assets/css/styles.css
@@ -342,88 +342,6 @@ span.not-available {
 	color: #333;
 }
 
-div#function-list-scroll-bar,
-div#viewport-scroll-bar
-{
-	width: 19px;
-	background: transparent;
-	border-top: solid 1px white;
-	border-bottom: solid 1px white;
-	z-index: 999;
-}
-
-div#function-list-scroll-bar {
-	top: 54px;
-	right: 16px;
-	bottom: 41px;
-}
-
-div#viewport-scroll-bar {
-	top: 32px;
-	right: 16px;
-	bottom: 41px;
-}
-
-div#viewport-container {
-	font-size: 11px;
-	top: 30px;
-	left: 225px;
-	right: 15px;
-	bottom: 40px;
-	padding: 10px 29px 0 10px;
-	background: white;
-	color: black;
-	border: solid 1px #ccc;
-	border-top: solid 1px black;
-	border-left: solid 1px black;
-	overflow: hidden;
-	-khtml-user-select: text;
-	-apple-dashboard-region: dashboard-region(control rectangle);
-}
-
-/* BEGIN: VIEWPORT PAGE STYLES */
-div#viewport-container div.home,
-div#viewport-container div.up
-{
-	padding: 0.5em 0;
-}
-
-div#viewport-container div.home {
-	float: right;
-}
-
-div#viewport-container div.home:after {
-	content: '/';
-	padding: 0 0.5em;
-}
-
-div#viewport-container div.up {
-	clear: both;
-	float: right;
-}
-
-div#viewport-container hr {
-	clear: both;
-}
-
-div#viewport-container h1 {
-	line-height: 1.2em;
-}
-
-div#viewport-container {
-	
-}
-
-div#viewport-container {
-	
-}
-/* BEGIN: VIEWPORT PAGE STYLES */
-
-div#drawer {
-	position: static;
-	height: 32px
-}
-
 div#phpfr-title {
 	top: 12px;
 	right: 18px;
@@ -467,11 +385,6 @@ div#favorites-control:hover {
 	opacity: 1.0;
 }
 
-div.phpfr-footer {
-	height: 10px;
-	width: 10px;
-}
-
 div#fontsize-control {
 	bottom: 19px;
 	left: 225px;
@@ -501,7 +414,92 @@ span#function-list-count {
 	font-weight: bold;
 }
 
-/* phpfr content */
+/* BEGIN: SCROLLBAR STYLES */
+div#function-list-scroll-bar,
+div#viewport-scroll-bar
+{
+	right: 16px;
+	width: 19px;
+	bottom: 41px;
+	background: transparent;
+	border-top: solid 1px white;
+	border-bottom: solid 1px white;
+	z-index: 999;
+}
+
+div#function-list-scroll-bar {
+	top: 54px;
+}
+
+div#viewport-scroll-bar {
+	top: 32px;
+}
+/* END: SCROLLBAR STYLES */
+
+div#viewport-container {
+	font-size: 11px;
+	top: 30px;
+	left: 225px;
+	right: 15px;
+	bottom: 40px;
+	padding: 0 29px 0 10px;
+	background: white;
+	color: black;
+	border: solid 1px #ccc;
+	border-top: solid 1px black;
+	border-left: solid 1px black;
+	overflow: hidden;
+	-khtml-user-select: text;
+	-apple-dashboard-region: dashboard-region(control rectangle);
+}
+
+/* BEGIN: VIEWPORT PAGE STYLES */
+div.phpfr-header,
+div.phpfr-footer
+{
+	clear: both;
+	font-size: 10px;
+	line-height: 10px;
+}
+
+div#viewport-container div.home,
+div#viewport-container div.up
+{
+	padding: 0.5em 0;
+}
+
+div#viewport-container div.home {
+	float: right;
+}
+
+div#viewport-container div.home:after {
+	content: '/';
+	padding: 0 0.5em;
+}
+
+div#viewport-container div.up {
+	clear: both;
+	float: right;
+}
+
+div#viewport-container hr {
+	clear: both;
+}
+
+div#viewport-container h1 {
+	line-height: 1.2em;
+}
+
+div#viewport-container {
+	
+}
+
+div#viewport-container {
+	
+}
+/* END: VIEWPORT PAGE STYLES */
+
+/* BEGIN: PHPFR CONTENT STYLES */
 div.phpfr-content h1 {
 	margin-top: 0;
 	line-height: 1em;
@@ -570,3 +568,4 @@ div.phpfr-content {
 div.phpfr-content {
 	
 }
+/* END: PHPFR CONTENT STYLES */
